[gd_scene load_steps=9 format=3 uid="uid://cktom2idg5lta"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_41el3"]
[ext_resource type="Script" path="res://Player/Camera.gd" id="2_5ulex"]
[ext_resource type="Material" uid="uid://c7aj8ux5thu3n" path="res://Materials/Player_Test_Material.tres" id="2_6bwaj"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i2xu1"]

[sub_resource type="BoxMesh" id="BoxMesh_fvg5n"]
size = Vector3(0.2, 0.2, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nx6vm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tymqh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gce5h"]
radius = 1.0

[node name="CharacterBody3D" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_41el3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_i2xu1")
surface_material_override/0 = ExtResource("2_6bwaj")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.22553, -0.6)
mesh = SubResource("BoxMesh_fvg5n")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.22553, -0.6)
mesh = SubResource("BoxMesh_fvg5n")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_nx6vm")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 3)
script = ExtResource("2_5ulex")

[node name="CameraVisonTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -3)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)
shape = SubResource("SphereShape3D_tymqh")
spring_length = 3.0
margin = 0.5

[node name="CameraMoveTarget" type="Node3D" parent="CameraPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1.25453, -1.1)
target_position = Vector3(0, 0, -1)

[node name="RayCast3D2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1.25453, -1.1)
target_position = Vector3(0, 0, -1)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_gce5h")
